generate swagger for new api
